--- a/Project - Lending Club Model.ipynb
+++ b/Project - Lending Club Model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "9               3390 Luis Rue\\nMauricestad, VA 00813  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1930,29 +1930,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can drop  \n",
-    "1) grade (when we can use the more granular subgrade feature instead)  \n",
-    "2) emp_title  \n",
-    "3) purpose \n",
-    "4) issue_d\n",
-    "5) title   \n",
-    "6) initial_list_status  \n",
-    "7) address  \n",
-    "\n",
-    "categorical data to encode  \n",
-    "1) term  \n",
-    "2) sub-grade  \n",
-    "3) emp_length  \n",
-    "4) home_ownership  \n",
-    "5) verification status   \n",
-    "6) loan_status  \n",
-    "7) earliest_cr_line  \n",
-    "8) application_type"
+    "**Columns to drop from consideration**  \n",
+    "1) grade - can use the more granular subgrade feature instead  \n",
+    "2) emp_title  - see below   \n",
+    "3) purpose - categorical data regarding the reason for the loan. Similar reason to dropping emp_title  \n",
+    "4) issue_d - the month in which the loan was issued does not apppear to be a crucial feature. Dropped to focus on other features  \n",
+    "5) title - redundant feature, basically information similar to issue_d column   \n",
+    "6) initial_list_status - initial listing is not important to us as we are focusing on all accepted loans (i.e. not those that were rejected)  \n",
+    "7) address - not an easy way to encode a written address as there is no underlying logic to it. One idea might be to perhaps overlay a numbered grid over google maps and maybe assign the addresses to regions and tie it into average income for the neighbourhood. That's a lot of effort for just one feature and we don't add unnecessary bias to the feature  \n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1961,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1969,13 +1960,13 @@
       "text/plain": [
        "Index(['loan_amnt', 'term', 'int_rate', 'installment', 'sub_grade',\n",
        "       'emp_length', 'home_ownership', 'annual_inc', 'verification_status',\n",
-       "       'issue_d', 'loan_status', 'dti', 'earliest_cr_line', 'open_acc',\n",
-       "       'pub_rec', 'revol_bal', 'revol_util', 'total_acc', 'application_type',\n",
-       "       'mort_acc', 'pub_rec_bankruptcies'],\n",
+       "       'loan_status', 'dti', 'earliest_cr_line', 'open_acc', 'pub_rec',\n",
+       "       'revol_bal', 'revol_util', 'total_acc', 'application_type', 'mort_acc',\n",
+       "       'pub_rec_bankruptcies'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2000,9 +1991,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mort_acc                37795\n",
+       "emp_length              18301\n",
+       "pub_rec_bankruptcies      535\n",
+       "revol_util                276\n",
+       "verification_status         0\n",
+       "term                        0\n",
+       "int_rate                    0\n",
+       "installment                 0\n",
+       "sub_grade                   0\n",
+       "home_ownership              0\n",
+       "annual_inc                  0\n",
+       "loan_status                 0\n",
+       "dti                         0\n",
+       "earliest_cr_line            0\n",
+       "open_acc                    0\n",
+       "pub_rec                     0\n",
+       "revol_bal                   0\n",
+       "total_acc                   0\n",
+       "application_type            0\n",
+       "loan_amnt                   0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isnull().sum().sort_values(ascending=False)"
    ]
@@ -2016,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2024,31 +2046,23 @@
      "output_type": "stream",
      "text": [
       "mort_acc                9.543469\n",
-      "emp_title               5.789208\n",
       "emp_length              4.621115\n",
-      "title                   0.443148\n",
       "pub_rec_bankruptcies    0.135091\n",
       "revol_util              0.069692\n",
-      "loan_repaid             0.000000\n",
-      "issue_d                 0.000000\n",
+      "verification_status     0.000000\n",
       "term                    0.000000\n",
       "int_rate                0.000000\n",
       "installment             0.000000\n",
-      "grade                   0.000000\n",
       "sub_grade               0.000000\n",
       "home_ownership          0.000000\n",
       "annual_inc              0.000000\n",
-      "verification_status     0.000000\n",
-      "purpose                 0.000000\n",
       "loan_status             0.000000\n",
-      "address                 0.000000\n",
       "dti                     0.000000\n",
       "earliest_cr_line        0.000000\n",
       "open_acc                0.000000\n",
       "pub_rec                 0.000000\n",
       "revol_bal               0.000000\n",
       "total_acc               0.000000\n",
-      "initial_list_status     0.000000\n",
       "application_type        0.000000\n",
       "loan_amnt               0.000000\n",
       "dtype: float64\n"
@@ -2065,7 +2079,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pub_rec_bankruptcies, revol_util"
+    "Only a small portion of rows have pub_rec_bankruptcies, revol_util values as null, so the entire rows for those values will just be removed for efficiency's sake. "
    ]
   },
   {
@@ -2111,96 +2125,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dealing with categorical data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The next step will be to convert the categorical data in the loan_status column, and map it to numeric values that can be processed by the model we select. After ensuring that the only unique values are 'Fully Paid' and 'Charged Off'...  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Fully Paid', 'Charged Off'], dtype=object)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['loan_status'].unique()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "... we map those values to '1' and '0' respectively. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Encode loan status categorical labels to numeric values for model processing \n",
-    "\n",
-    "df['loan_repaid'] = df['loan_status'].map({'Fully Paid':1, 'Charged Off':0})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the value count below, we see although there are thousands of jobs that fall under a common category (Teacher, Registered Nurse, Supervisor), there is still a massive number of unique titles (173,105). Though some can be combined further (e.g. Registered Nurse and RN), many are too nebulous to combine (the 1830 instances of Supervisor likely cover a vast number of different supervisory capacities). The nature of job titles is such that there will always be a large variety, negating the use of any sort of meaningful label encoding. Moreover, nearly 23,000 instances have this field with a null value. With such a hill to climb to engineer this feature into being useable, I’ll drop it entirely."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Teacher                                     4389\n",
-       "Manager                                     4250\n",
-       "Registered Nurse                            1856\n",
-       "RN                                          1846\n",
-       "Supervisor                                  1830\n",
-       "                                            ... \n",
-       "Strategic Alliance & Partnership Manager       1\n",
-       "inventory controller                           1\n",
-       "MissionValley Bank                             1\n",
-       "JASA                                           1\n",
-       "Assemblyworker                                 1\n",
-       "Name: emp_title, Length: 173105, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['emp_title'].value_counts()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2209,6 +2133,13 @@
     "feat_info('mort_acc')\n",
     "df.isnull().sum().sort_values(ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2269,6 +2200,120 @@
    "outputs": [],
    "source": [
     "df['mort_acc'] = df.apply(lambda x: fill_empty_mort_acc(x['total_acc'], x['mort_acc']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dealing with categorical data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next step will be to convert the categorical data in the loan_status column, and map it to numeric values that can be processed by the model we select."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Categorical data to encode  \n",
+    "1) term  \n",
+    "2) sub-grade  \n",
+    "3) emp_length  \n",
+    "4) home_ownership  \n",
+    "5) verification status   \n",
+    "6) loan_status  \n",
+    "7) earliest_cr_line  \n",
+    "8) application_type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we'll deal with the all-important output column for this model: loan_status\n",
+    "\n",
+    "After ensuring that the only unique values are 'Fully Paid' and 'Charged Off'...  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Fully Paid', 'Charged Off'], dtype=object)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['loan_status'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... we map those values to '1' and '0' respectively. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode loan status categorical labels to numeric values for model processing \n",
+    "\n",
+    "df['loan_repaid'] = df['loan_status'].map({'Fully Paid':1, 'Charged Off':0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the value count below, we see although there are thousands of jobs that fall under a common category (Teacher, Registered Nurse, Supervisor), there is still a massive number of unique titles (173,105). Though some can be combined further (e.g. Registered Nurse and RN), many are too nebulous to combine (the 1830 instances of Supervisor likely cover a vast number of different supervisory capacities). The nature of job titles is such that there will always be a large variety, negating the use of any sort of meaningful label encoding. Moreover, nearly 23,000 instances have this field with a null value. With such a hill to climb to engineer this feature into being useable, I’ll drop it entirely."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Teacher                                     4389\n",
+       "Manager                                     4250\n",
+       "Registered Nurse                            1856\n",
+       "RN                                          1846\n",
+       "Supervisor                                  1830\n",
+       "                                            ... \n",
+       "Women's Health Research/OBGYN Consultant       1\n",
+       "Sales district leader                          1\n",
+       "Foundation Relations Coordinator               1\n",
+       "NJ Judiciary                                   1\n",
+       "US Treasury Department                         1\n",
+       "Name: emp_title, Length: 173105, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['emp_title'].value_counts()"
    ]
   },
   {
